# Q1_26_Accel_Meowy

./: README.md
Pinocchio-Fundraiser/Pinocchio-Fundraiser-Solution/: assignment.md
Rust-Assignment/Challenge1/generic-storage/: Cargo.toml
Rust-Assignment/Challenge1/generic-storage/src/: lib.rs  main.rs  models.rs  serializer.rs  storage.rs
Rust-Assignment/Challenge1/generic-storage/tests/: storage_tests.rs
SolanaGPT-Tuktuk/: Anchor.toml  assignment.md  package-lock.json
SolanaGPT-Tuktuk/programs/solana-gpt-tuktuk/: Cargo.toml
SolanaGPT-Tuktuk/programs/solana-gpt-tuktuk/src/: lib.rs  oracle.rs  state.rs
SolanaGPT-Tuktuk/programs/solana-gpt-tuktuk/src/instructions/: ask_gpt.rs  callback_gpt.rs  initialize.rs  mod.rs  schedule_ask.rs
SolanaGPT-Tuktuk/tests/: solana-gpt-tuktuk.ts
Tuktuk/: README.md  assignment.md
accel-pinocchio-escrow/: assignment.md
assignment-11-metaplex-core/: README.md
escrow-litesvm/: assignment.md
escrow-litesvm/programs/anchor-escrow/: Cargo.toml
escrow-litesvm/programs/anchor-escrow/src/: lib.rs
escrow-litesvm/programs/anchor-escrow/src/instructions/: auto_refund.rs  mod.rs  schedule_refund.rs  take.rs
escrow-litesvm/programs/anchor-escrow/src/state/: escrow.rs
escrow-litesvm/programs/anchor-escrow/src/tests/: mod.rs
group-challenge/: assignment.md
magicblock-er-example/: Anchor.toml  assignment.md
magicblock-er-example/programs/er-state-account/: Cargo.toml
magicblock-er-example/programs/er-state-account/src/: lib.rs
magicblock-er-example/programs/er-state-account/src/instructions/: callback_vrf.rs  callback_vrf_er.rs  mod.rs  request_vrf.rs  request_vrf_er.rs
magicblock-er-example/tests/: er-state-account.ts
week1-transfer-hook-vault/: Anchor.toml  Cargo.toml
week1-transfer-hook-vault/program-tests/: Cargo.toml
week1-transfer-hook-vault/program-tests/src/: lib.rs
week1-transfer-hook-vault/programs/week1-transfer-hook-vault/: Cargo.toml
week1-transfer-hook-vault/programs/week1-transfer-hook-vault/src/: errors.rs  lib.rs
week1-transfer-hook-vault/programs/week1-transfer-hook-vault/src/instructions/: add_to_whitelist.rs  deposit.rs  init_extra_account_metas.rs  initialize.rs  mint_tokens.rs  mod.rs  remove_from_whitelist.rs  transfer_hook.rs  withdraw.rs
week1-transfer-hook-vault/programs/week1-transfer-hook-vault/src/state/: vault_config.rs
week1-transfer-hook-vault/programs/week1-transfer-hook-vault/src/tests/: mod.rs
week1-transfer-hook-vault/tests/: week1-transfer-hook-vault.ts
whitelist-transfer-hook/token2022-transfer-hook/: assignment.md
whitelist-transfer-hook/token2022-transfer-hook/programs/whitelist-transfer-hook/src/: lib.rs
whitelist-transfer-hook/token2022-transfer-hook/programs/whitelist-transfer-hook/src/instructions/: init_extra_account_meta.rs  mint_token.rs  mod.rs  transfer_hook.rs  (+1 more)
whitelist-transfer-hook/token2022-transfer-hook/tests/: whitelist-transfer-hook.ts
(+1 files in other folders)
