[workspace]
members = [
    "programs/*"
]
exclude = ["program-tests"]
resolver = "2"

[workspace.dependencies]
constant_time_eq = "=0.3.1"
solana-account-info = "~2.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
