[package]
name = "week1-transfer-hook-vault"
version = "0.1.0"
description = "Transfer Hook Vault - TURBIN3 Accel Week 1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "week1_transfer_hook_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["interface-instructions"] }
anchor-spl = "0.32.1"
spl-discriminator = "0.5.1"
spl-tlv-account-resolution = "0.11.1"
spl-transfer-hook-interface = "2.1.0"
constant_time_eq = "=0.3.1"
blake3 = "=1.8.2"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
